--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -23,7 +23,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -67,11 +67,11 @@ ht-degree: 98%
 * 活動
 * 認證
 
-前往 [Experience League](https://experienceleague.adobe.com/#home) 瞭解詳情！
+前往 [Experience League](https://experienceleague.adobe.com/zh-hant#home) 瞭解詳情！
 
 +++即將到來的活動
 
-請參閱 [Experience League 活動](https://experienceleague.adobe.com/events/)
+請參閱 [Experience League 活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)
 
 +++
 
@@ -99,7 +99,7 @@ ht-degree: 98%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-請參閱 Adobe 狀態的 [2023 年 3 月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/03082023.html#status)以檢視最新的更新。
+請參閱 Adobe 狀態的 [2023 年 3 月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/03082023.html?lang=zh-Hant#status)以檢視最新的更新。
 
 +++
 
@@ -113,7 +113,7 @@ ht-degree: 98%
 
 * 已更新「說明」選單，現包含 Experience League 教學影片、產品文件和同業貼文的搜尋結果。 您可在 Experience League 中檢視結果。
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 客群])。
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 客群])。
 
 +++
 
@@ -145,9 +145,9 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 5 月 | [在 [!DNL Real-Time Customer Data Platform] 中設定  [!DNL Adobe Target]  目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html) | 影片 | 了解如何在 [!DNL Real-Time Customer Data Platform] 中設定 Adobe Target 目的地以開始從 [!DNL Real-Time CDP] 傳送區段和輪廓屬性到 [!DNL Adobe Target]。 | [!DNL Real-Time CDP]、[!DNL Adobe Target] |
-| 2023 年 5 月 | [分享區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 Adobe [!DNL Real-Time Customer Data Platform] 分享區段和輪廓屬性到 [!DNL Adobe Target] 以在您的網站、行動應用程式和其他數位資產中顯示即時個人化內容。 | [!DNL Adobe Target] |
-| 2023 年 5 月 | [在 Target 中使用 Real-Time CDP 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html) | 影片 | 了解如何在 [!DNL Adobe Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以在您的網站和行動應用程式上提供個人化體驗。 | [!DNL Adobe Target] |
+| 2023 年 5 月 | [在 [!DNL Real-Time Customer Data Platform] 中設定  [!DNL Adobe Target]  目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html?lang=zh-Hant) | 影片 | 了解如何在 [!DNL Real-Time Customer Data Platform] 中設定 Adobe Target 目的地以開始從 [!DNL Real-Time CDP] 傳送區段和輪廓屬性到 [!DNL Adobe Target]。 | [!DNL Real-Time CDP]、[!DNL Adobe Target] |
+| 2023 年 5 月 | [分享區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html?lang=zh-Hant) | 影片 | 了解如何從 Adobe [!DNL Real-Time Customer Data Platform] 分享區段和輪廓屬性到 [!DNL Adobe Target] 以在您的網站、行動應用程式和其他數位資產中顯示即時個人化內容。 | [!DNL Adobe Target] |
+| 2023 年 5 月 | [在 Target 中使用 Real-Time CDP 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html?lang=zh-Hant) | 影片 | 了解如何在 [!DNL Adobe Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以在您的網站和行動應用程式上提供個人化體驗。 | [!DNL Adobe Target] |
 
 {style="table-layout:auto"}
 
@@ -161,14 +161,14 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 發行日期：**2023 年 5 月 10 日**
 
-* [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/docs/analytics/release-notes/latest.html)
+* [!DNL Analytics] [發行說明](https://experienceleague.adobe.com/docs/analytics/release-notes/latest.html?lang=zh-Hant)
 * [!DNL Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/analytics.html?lang=zh-Hant)
 
 ### AppMeasurement {#appm}
 
 發行版本：**2.23.0**
 
-* [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html)
+* [JavaScript 適用的 AppMeasurement 發行說明](https://experienceleague.adobe.com/docs/analytics/implementation/appmeasurement-updates.html?lang=zh-Hant)
 
 ### 新 [!DNL Analytics] 教學課程和其他課程 {#tutorials-analytics}
 
@@ -176,7 +176,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 隨選 | [只需點按幾下即可啟動並執行資料收集和事件轉送！](https://experienceleague.adobe.com/docs/experience-league-live-events/events/episodes/exl-live-episode-4-25-23.html) | 影片活動 - Experience League Live | 如果您是 Adobe 現代資料收集工具的新手並且對深入了解感到緊張，您現在可以比以往更快地啟動並執行基本安裝，包括將事件資料傳送到伺服器端的 Meta。只需點按幾下，Adobe 的資料收集快速啟動工作流程就可以在後端完成多項設定，以節省您的時間並確保您的設定正確無誤。 |
+| 隨選 | [只需點按幾下即可啟動並執行資料收集和事件轉送！](https://experienceleague.adobe.com/docs/experience-league-live-events/events/episodes/exl-live-episode-4-25-23.html?lang=zh-Hant) | 影片活動 - Experience League Live | 如果您是 Adobe 現代資料收集工具的新手並且對深入了解感到緊張，您現在可以比以往更快地啟動並執行基本安裝，包括將事件資料傳送到伺服器端的 Meta。只需點按幾下，Adobe 的資料收集快速啟動工作流程就可以在後端完成多項設定，以節省您的時間並確保您的設定正確無誤。 |
 
 {style="table-layout:auto"}
 
@@ -190,8 +190,8 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 發行日期：**2023 年 5 月 10 日**
 
-* Customer Journey Analytics [發行說明](https://experienceleague.adobe.com/docs/analytics-platform/using/releases/latest.html)
-* Customer Journey Analytics [產品文件與教學課程](https://experienceleague.adobe.com/docs/customer-journey-analytics.html)
+* Customer Journey Analytics [發行說明](https://experienceleague.adobe.com/docs/analytics-platform/using/releases/latest.html?lang=zh-Hant)
+* Customer Journey Analytics [產品文件與教學課程](https://experienceleague.adobe.com/docs/customer-journey-analytics.html?lang=zh-Hant)
 
 ### 新的 Customer Journey Analytics 教學課程和其他課程 {#tutorials-cja}
 
@@ -199,10 +199,10 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 5 月 | [什麼是 Customer Journey Analytics？](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/cja-basics/what-is-customer-journey-analytics.html) | 影片 | 了解如何使用 Adobe Experience Platform 中可用的任何資料來分析客戶的跨管道歷程。 |
-| 2023 年 5 月 | [在 Analysis Workspace 中將篩選器用作維度](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/use-filters-as-dimensions.html) | 影片 | 了解如何在 Analysis Workspace 專案中將篩選器用作維度時來比較和視覺化篩選器。 |
-| 2023 年 5 月 | [Customer Journey Analytics 中的篩選器介紹](https://experienceleague.adobe.com/docs/platform-learn/tutorials/cja/introduction-to-filters-in-cja.html) | 影片 | Desc. |
-| 2023 年 5 月 | [篩選器概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/introduction-to-filters-in-cja.html) | 影片 | 了解 Customer Journey Analytics 篩選產生器的重要元件。 |
+| 2023 年 5 月 | [什麼是 Customer Journey Analytics？](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/cja-basics/what-is-customer-journey-analytics.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe Experience Platform 中可用的任何資料來分析客戶的跨管道歷程。 |
+| 2023 年 5 月 | [在 Analysis Workspace 中將篩選器用作維度](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/use-filters-as-dimensions.html?lang=zh-Hant) | 影片 | 了解如何在 Analysis Workspace 專案中將篩選器用作維度時來比較和視覺化篩選器。 |
+| 2023 年 5 月 | [Customer Journey Analytics 中的篩選器介紹](https://experienceleague.adobe.com/docs/platform-learn/tutorials/cja/introduction-to-filters-in-cja.html?lang=zh-Hant) | 影片 | Desc. |
+| 2023 年 5 月 | [篩選器概觀](https://experienceleague.adobe.com/docs/customer-journey-analytics-learn/tutorials/components/filters/introduction-to-filters-in-cja.html?lang=zh-Hant) | 影片 | 了解 Customer Journey Analytics 篩選產生器的重要元件。 |
 
 {style="table-layout:auto"}
 
@@ -212,8 +212,8 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 發行日期：**2023 年 5 月 10 日**
 
-* [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/docs/media-analytics/using/release-notes/release-notes.html)
-* [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html)
+* [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/docs/media-analytics/using/release-notes/release-notes.html?lang=zh-Hant)
+* [!DNL Streaming Media Analytics] [產品文件與教學課程](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html?lang=zh-Hant)
 
 ## Audience Manager {#aam}
 
@@ -227,14 +227,14 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
+| 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html?lang=zh-Hant) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
 | 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html?lang=zh-Hant) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
-| 2023 年 4 月 | [大量匯出選項](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21861.html) | 新文章 | 了解如何從 [!DNL Audience Manager] 大量匯出資料。 |
-| 2023 年 4 月 | [LiveRamp 伺服器對伺服器目的地](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21926.html) | 新文章 | 本文概觀了 [!DNL Audience Manager] 中的 [!UICONTROL LiveRamp] 目的地。 |
+| 2023 年 4 月 | [大量匯出選項](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21861.html?lang=zh-Hant) | 新文章 | 了解如何從 [!DNL Audience Manager] 大量匯出資料。 |
+| 2023 年 4 月 | [LiveRamp 伺服器對伺服器目的地](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21926.html?lang=zh-Hant) | 新文章 | 本文概觀了 [!DNL Audience Manager] 中的 [!UICONTROL LiveRamp] 目的地。 |
 
 {style="table-layout:auto"}
 
-如需自助資源，請參閱 Experience League 上的 [Audience Manager 文件與教學課程](https://experienceleague.adobe.com/docs/audience-manager.html)。
+如需自助資源，請參閱 Experience League 上的 [Audience Manager 文件與教學課程](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant)。
 
 +++
 
@@ -248,9 +248,9 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
-* [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
-* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概觀。
-* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html) - 閱讀 [!DNL Experience Manager as a Cloud Service] 最新發行說明。
+* [Experience Manager 版本更新和藍圖](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/home.html?lang=zh-Hant) - 了解 Experience Manager 版本藍圖、之前的版本更新及文件更新。
+* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant) - 觀看目前和過去版本的 [!DNL Experience Manager as a Cloud Service] 專題影片概觀。
+* [Adobe Experience Manager as a Cloud Service 目前發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant) - 閱讀 [!DNL Experience Manager as a Cloud Service] 最新發行說明。
 
 ### 最新版本概觀影片
 
@@ -270,20 +270,20 @@ _新功能_
 * 為 Dynamic Media 影片傳遞 (啟用 CMAF) 中的自適應串流推出的新通訊協定 (DASH - 基於 HTTP 的動態自適應串流) 支援：
    * 自適應串流 (DASH/HLS) 可確保更好的一般使用者觀看影片體驗。
    * DASH 是自適應影片串流的國際標準通訊協定，在業界被廣泛採用。
-   * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html#enable-dash)。歐洲、中東和非洲地區即將提供。
+   * 在亞太和北美地區有提供；[由支援票證啟用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/video.html?lang=zh-Hant#enable-dash)。歐洲、中東和非洲地區即將提供。
 * 已新增對 WebP 影像的支援以自動擷取中繼資料、產生縮圖和自訂轉譯。這些檔案現在也支援智慧標籤和智慧裁切功能。
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
 
 _新功能_
 
-* **[使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html)** – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
-* **[前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html)**：為以核心元件為基礎之最適化表單使用標準化的 BEM 型主題。您可以使用前端部署管道部署它們，以增強表單的外觀和風格。也可以協助符合您組織認可的品牌設計方針。
-* **[為以核心元件為基礎的最適化表單產生記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html)** – 為使用核心元件建置的最適化表單，建立包含提交之資料的記錄文件，供一般使用者封存或參考，採列印或文件格式。
-* **[使用儲存最適化表單做為範本功能高效建置表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html#save-an-adaptive-form-as-template-saving-adaptive-form-as-template)** – 透過將現有的品牌認可表單儲存為表單範本以快速重複使用，促進和標準化表單開發工作。
-* **[將 AEM Forms 連接至支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-relational-database-configure-relational-database)** – 使用 JDBC 通訊協定直接從 AEM Cloud Service 連接至企業資料庫，而不需透過 REST API 公開它們。
-* **[使用 Open API 3.0 整合 REST 端點](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30)** – 順暢地整合到支援 Open API 3.0 的記錄系統，以使用表單資料模型擷取資料。
-* **[共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html)** – 使用最適化表單審閱機制讓一個或多個審核者審閱表單。
+* **[使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html?lang=zh-Hant)** – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html?lang=zh-Hant)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
+* **[前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html?lang=zh-Hant)**：為以核心元件為基礎之最適化表單使用標準化的 BEM 型主題。您可以使用前端部署管道部署它們，以增強表單的外觀和風格。也可以協助符合您組織認可的品牌設計方針。
+* **[為以核心元件為基礎的最適化表單產生記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=zh-Hant)** – 為使用核心元件建置的最適化表單，建立包含提交之資料的記錄文件，供一般使用者封存或參考，採列印或文件格式。
+* **[使用儲存最適化表單做為範本功能高效建置表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html?lang=zh-Hant#save-an-adaptive-form-as-template-saving-adaptive-form-as-template)** – 透過將現有的品牌認可表單儲存為表單範本以快速重複使用，促進和標準化表單開發工作。
+* **[將 AEM Forms 連接至支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-relational-database-configure-relational-database)** – 使用 JDBC 通訊協定直接從 AEM Cloud Service 連接至企業資料庫，而不需透過 REST API 公開它們。
+* **[使用 Open API 3.0 整合 REST 端點](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html?lang=zh-Hant#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30)** – 順暢地整合到支援 Open API 3.0 的記錄系統，以使用表單資料模型擷取資料。
+* **[共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=zh-Hant)** – 使用最適化表單審閱機制讓一個或多個審核者審閱表單。
 
 ### Headless 調適型表單早期採用者計劃
 
@@ -298,7 +298,7 @@ _新功能_
 
 ### [!DNL Cloud Manager]
 
-* [AEM Project Archetype](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/developing/archetype/overview.html) 已更新至版本 41。
+* [AEM Project Archetype](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/developing/archetype/overview.html?lang=zh-Hant) 已更新至版本 41。
 
 ### [!DNL Workfront for Experience Manager] 增強型連接器
 
@@ -330,18 +330,18 @@ _已知問題_
 
 所有 [!DNL Experience Manager] 發行資訊位於：
 
-* [Experience Manager as a Cloud Service 發行資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
-* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html)
-* [Adobe Experience Manager as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html)
+* [Experience Manager as a Cloud Service 發行資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html?lang=zh-Hant)
+* [Experience Manager as a Cloud Service 版本更新](https://experienceleague.adobe.com/docs/experience-manager-release-overview-events/aemcsupdates/overview.html?lang=zh-Hant)
+* [Adobe Experience Manager as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current.html?lang=zh-Hant)
 * [Experience Manager as a Cloud Service 發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html?lang=zh-Hant)
 * [Experience Manager Cloud Manager 發行說明](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/release-notes/current.html?lang=zh-Hant)
-* [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html)
-* [Experience Manager 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/release-notes.html)
-* [Experience Manager 6.4 Cumulative Fix Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html)
+* [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html?lang=zh-Hant)
+* [Experience Manager 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/release-notes.html?lang=zh-Hant)
+* [Experience Manager 6.4 Cumulative Fix Pack 發行說明](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html?lang=zh-Hant)
 * [Experience Manager Assets Dynamic Media 發行說明](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html?lang=zh-Hant)
 * [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
 * [Experience Manager 桌面應用程式發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html?lang=zh-Hant)
-* [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
+* [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html?lang=zh-Hant)
 * [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
 * [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html?lang=zh-Hant)
 
@@ -351,13 +351,13 @@ _已知問題_
 
 | 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- | ------|
-| 2023 年 5 月 | [整合 Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform/web-sdk.html#create-datastream---experience-platform) | 影片 | 了解如何將 AEM as a Cloud Service 與 Experience Platform Web SDK 整合。 | AEM Sites |
-| 2023 年 5 月 | [在互動式通訊中自訂文字編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/interactive-communications/customize-text-editor.html) | 影片 | 在互動式通訊中自訂文字編輯器以新增自訂字型和大小。 | AEM Forms |
-| 2023 年 5 月 | [React 應用程式與 AEM Forms 和 Acrobat Sign](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/react-ic-sign/introduction.html) | 影片 | 使用從原生 React 應用程式提交的資料建立互動式通訊文件，並將其呈現給一般使用者以使用 Acrobat 簽名小工具進行簽名 | AEM Forms |
-| 2023 年 5 月 | [將 Forms CS 與 Sharepoint 整合](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-in-sharepoint.html) | 影片 | 了解如何設定和將 AEM Forms CS 與 Microsoft® Sharepoint 整合。 | AEM Forms CS |
-| 2023 年 5 月 | [將表單提交內容儲存於 OneDrive](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-one-drive.html) | 影片 | 設定最適化表單，將表單資料儲存於 OneDrive。 | AEM Forms CS |
-| 2023 年 5 月 | [如何使用 AEM Headless 中的最佳化影像](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/images.html) | 影片 | 如何使用 AEM Headless 中的最佳化影像。 | AEM CS |
-| 2023 年 5 月 | [了解如何在 AEM Headless 中使用大型結果](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/large-result-sets.html) | 影片 | 了解如何在 AEM Headless 中使用大型結果集。 | AEM CS |
+| 2023 年 5 月 | [整合 Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform/web-sdk.html?lang=zh-Hant#create-datastream---experience-platform) | 影片 | 了解如何將 AEM as a Cloud Service 與 Experience Platform Web SDK 整合。 | AEM Sites |
+| 2023 年 5 月 | [在互動式通訊中自訂文字編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/interactive-communications/customize-text-editor.html?lang=zh-Hant) | 影片 | 在互動式通訊中自訂文字編輯器以新增自訂字型和大小。 | AEM Forms |
+| 2023 年 5 月 | [React 應用程式與 AEM Forms 和 Acrobat Sign](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/react-ic-sign/introduction.html?lang=zh-Hant) | 影片 | 使用從原生 React 應用程式提交的資料建立互動式通訊文件，並將其呈現給一般使用者以使用 Acrobat 簽名小工具進行簽名 | AEM Forms |
+| 2023 年 5 月 | [將 Forms CS 與 Sharepoint 整合](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-in-sharepoint.html?lang=zh-Hant) | 影片 | 了解如何設定和將 AEM Forms CS 與 Microsoft® Sharepoint 整合。 | AEM Forms CS |
+| 2023 年 5 月 | [將表單提交內容儲存於 OneDrive](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-one-drive.html?lang=zh-Hant) | 影片 | 設定最適化表單，將表單資料儲存於 OneDrive。 | AEM Forms CS |
+| 2023 年 5 月 | [如何使用 AEM Headless 中的最佳化影像](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/images.html?lang=zh-Hant) | 影片 | 如何使用 AEM Headless 中的最佳化影像。 | AEM CS |
+| 2023 年 5 月 | [了解如何在 AEM Headless 中使用大型結果](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/large-result-sets.html?lang=zh-Hant) | 影片 | 了解如何在 AEM Headless 中使用大型結果集。 | AEM CS |
 
 {style="table-layout:auto"}
 
@@ -367,22 +367,22 @@ _已知問題_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 4 月 | [在轉出內部 Live Copy 期間未更新參考](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21808.html) | 新文章 | 了解如何解決在轉出內部 Live Copy 期間未更新參考的問題。 |
-| 2023 年 4 月 | [將資產資料夾拖放到 AEM Assets Web UI 失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21865.html) | 新文章 | 找出將資產資料夾拖放到 AEM Assets Web UI 失敗的這個問題解決方法。 |
-| 2023 年 4 月 | [列出使用[!UICONTROL 查詢產生器] API 發佈的頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21884.html) | 新文章 | 了解如何列出在 AEM 作者上發佈的頁面。 |
-| 2023 年 4 月 | [如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21885.html) | 新文章 | 如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式。 |
+| 2023 年 4 月 | [在轉出內部 Live Copy 期間未更新參考](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21808.html?lang=zh-Hant) | 新文章 | 了解如何解決在轉出內部 Live Copy 期間未更新參考的問題。 |
+| 2023 年 4 月 | [將資產資料夾拖放到 AEM Assets Web UI 失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21865.html?lang=zh-Hant) | 新文章 | 找出將資產資料夾拖放到 AEM Assets Web UI 失敗的這個問題解決方法。 |
+| 2023 年 4 月 | [列出使用[!UICONTROL 查詢產生器] API 發佈的頁面](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21884.html?lang=zh-Hant) | 新文章 | 了解如何列出在 AEM 作者上發佈的頁面。 |
+| 2023 年 4 月 | [如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21885.html?lang=zh-Hant) | 新文章 | 如何自訂[!UICONTROL 管理發佈]的啟用日期時間格式。 |
 
 {style="table-layout:auto"}
 
 ### 適用於 Experience Manager 的其他說明資源
 
-* [Experience Manager as a Cloud Service 指南](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/home.html)
-* [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html)
-* [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
-* [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
-* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
+* [Experience Manager as a Cloud Service 指南](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/home.html?lang=zh-Hant)
+* [Cloud Manager 使用手冊](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/content/introduction.html?lang=zh-Hant)
+* [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html?lang=zh-Hant)
+* [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html?lang=zh-Hant)
+* [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html?lang=zh-Hant#previous-updates)
 * [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html?lang=zh-Hant)
-* [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
+* [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html?lang=zh-Hant#aem-as-a-cloud-service)
 
 +++
 
@@ -390,12 +390,12 @@ _已知問題_
 
 [!DNL Experience Manager Guides] is an application deployed onto AEM. It is a powerful, enterprise-grade component content management solution (CCMS) which enables native DITA support in Adobe Experience Manager, empowering AEM to handle DITA-based content creation and delivery.
 
-Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/products/experience-manager/guides/features.html).
+Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/tw/products/experience-manager/guides/features.html).
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## [!DNL Adobe Commerce] {#commerce}
 
@@ -403,20 +403,20 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資料
 
-* 請參閱 [Adobe Commerce 和 Magento Open Source 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html)以取得最新資訊。
+* 請參閱 [Adobe Commerce 和 Magento Open Source 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 5 月 | [Headless 架構研討會 1](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/headless-architecture/introduction-to-headless/session-1.html) | 影片 | 了解什麼是 Headless 架構、可組合的商務和個人化體驗。 |
+| 2023 年 5 月 | [Headless 架構研討會 1](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/headless-architecture/introduction-to-headless/session-1.html?lang=zh-Hant) | 影片 | 了解什麼是 Headless 架構、可組合的商務和個人化體驗。 |
 | 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/getting-started/capabilities/live-search-full-demonstration.html?lang=zh-Hant) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
-| 2023 年 5 月 | [[!UICONTROL 即時搜尋]簡介](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search.html) | 影片 | 了解 Adobe Commerce 的[!UICONTROL 即時搜尋]功能如何提供快速、相關且直覺的搜尋體驗。 |
+| 2023 年 5 月 | [[!UICONTROL 即時搜尋]簡介](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search.html?lang=zh-Hant) | 影片 | 了解 Adobe Commerce 的[!UICONTROL 即時搜尋]功能如何提供快速、相關且直覺的搜尋體驗。 |
 
 {style="table-layout:auto"}
 
@@ -426,8 +426,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2023 年 4 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.28、QPT 1.1.29 和 QPT 1.1.30 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
-| 2023 年 4 月 | [新網域重新導向到預設網域](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/new-domain-redirecting.html) | 新文章 | 了解如何解決現有或不同環境中新網域重新導向到預設網域的問題。 |
+| 2023 年 4 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html?lang=zh-Hant) | 新文章 | 關於如何套用 QPT 1.1.28、QPT 1.1.29 和 QPT 1.1.30 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
+| 2023 年 4 月 | [新網域重新導向到預設網域](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/new-domain-redirecting.html?lang=zh-Hant) | 新文章 | 了解如何解決現有或不同環境中新網域重新導向到預設網域的問題。 |
 | 2023 年 4 月 | [當欄位變灰色時，如何變更 Magento.com 帳戶上的電子郵件地址？](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/how-to/change-email-address-on-magento-account.html?lang=zh-Hant) | 新文章 | 當欄位變灰色時，如何變更 [Magento.com](https://account.magento.com/customer/account/login) 帳戶上的電子郵件地址？ |
 
 {style="table-layout:auto"}
@@ -440,8 +440,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 +++詳細資料
 
-* 如需搶鮮版資訊，請參閱 [[!DNL Adobe Target]  搶鮮版](https://experienceleague.adobe.com/docs/target/using/release-notes/target-release-notes.html)
-* 如需目前版本資訊，請參閱 [[!DNL Adobe Target]  發行說明](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html)
+* 如需搶鮮版資訊，請參閱 [[!DNL Adobe Target]  搶鮮版](https://experienceleague.adobe.com/docs/target/using/release-notes/target-release-notes.html?lang=zh-Hant)
+* 如需目前版本資訊，請參閱 [[!DNL Adobe Target]  發行說明](https://experienceleague.adobe.com/docs/target/using/release-notes/release-notes.html?lang=zh-Hant)
 
 +++
 
@@ -455,7 +455,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 請到此處了解 [!DNL Adobe Campaign] 最新功能、改進項目和修正：
 
-在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) 發行說明中進一步了解最新功能、改進與修正。
+在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) 發行說明中進一步了解最新功能、改進與修正。
 
 ### 新 [!DNL Campaign]教學課程 {#tutorials-campaign}
 
@@ -463,10 +463,10 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-learn/tutorials/content-creation/create-a-survey.html) | 影片 | 學習如何在 [!DNL Adobe Campaign] v8 中建立意見調查。 | [!DNL Campaign] v8 |
-| 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/create-a-survey.html) | 影片 | 學習如何在 [!DNL Adobe Campaign Classic] 建立意見調查。 | [!DNL Campaign Classic] |
-| 2023 年 5 月 | [設計電子郵件傳遞內容](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/design-email-delivery-content.html) | 影片 | 了解如何設定、個人化及測試電子郵件傳遞內容。 了解如何使用範本、上傳影像、新增表情符號，以及嵌入條碼與 QR 碼。 | [!DNL Campaign Classic] |
-| 2023 年 5 月 | [監視傳遞](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/reporting/monitor-a-delivery.html) | 影片 | 認識訊息記錄、工作記錄與傳遞記錄。 | [!DNL Campaign Standard] |
+| 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-learn/tutorials/content-creation/create-a-survey.html?lang=zh-Hant) | 影片 | 學習如何在 [!DNL Adobe Campaign] v8 中建立意見調查。 | [!DNL Campaign] v8 |
+| 2023 年 5 月 | [建立意見調查](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/create-a-survey.html?lang=zh-Hant) | 影片 | 學習如何在 [!DNL Adobe Campaign Classic] 建立意見調查。 | [!DNL Campaign Classic] |
+| 2023 年 5 月 | [設計電子郵件傳遞內容](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/email-channel/design-email-delivery-content.html?lang=zh-Hant) | 影片 | 了解如何設定、個人化及測試電子郵件傳遞內容。 了解如何使用範本、上傳影像、新增表情符號，以及嵌入條碼與 QR 碼。 | [!DNL Campaign Classic] |
+| 2023 年 5 月 | [監視傳遞](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/reporting/monitor-a-delivery.html?lang=zh-Hant) | 影片 | 認識訊息記錄、工作記錄與傳遞記錄。 | [!DNL Campaign Standard] |
 
 {style="table-layout:auto"}
 
@@ -487,7 +487,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### 最新 [!DNL Journey Optimizer] 產品版本
 
-進一步了解 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html)中最新功能、改進功能和修正。
+進一步了解 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant)中最新功能、改進功能和修正。
 
 ### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
 
@@ -495,9 +495,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 5 月 | [製作網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/author-a-web-campaign.html) | 影片 | 學習如何在 [!DNL Journey Optimizer] 行銷活動中使用網頁視覺編輯器創造網路體驗。 |
-| 2023 年 5 月 | [建立網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/create-a-web-campaign.html) | 影片 | 了解網路行銷活動是什麼。 了解如何設定網路行銷活動屬性、檢閱及發佈。 |
-| 2023 年 5 月 | [將資料集匯出至雲端儲存空間位置](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/data-management/export-datasets.html) | 影片 | 學習如何將資料集從 [!DNL Journey Optimizer] 匯出至 [!DNL Amazon] S3 目的地。 |
+| 2023 年 5 月 | [製作網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/author-a-web-campaign.html?lang=zh-Hant) | 影片 | 學習如何在 [!DNL Journey Optimizer] 行銷活動中使用網頁視覺編輯器創造網路體驗。 |
+| 2023 年 5 月 | [建立網路行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/web-channel/create-a-web-campaign.html?lang=zh-Hant) | 影片 | 了解網路行銷活動是什麼。 了解如何設定網路行銷活動屬性、檢閱及發佈。 |
+| 2023 年 5 月 | [將資料集匯出至雲端儲存空間位置](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/data-management/export-datasets.html?lang=zh-Hant) | 影片 | 學習如何將資料集從 [!DNL Journey Optimizer] 匯出至 [!DNL Amazon] S3 目的地。 |
 
 {style="table-layout:auto"}
 
